# minimetro_rl

./: .gitignore  CLAUDE.md  README.md  __init__.py  demo.py  environment.py  gym_demo.py  gym_example.py  main.py  pygame_renderer.py  pyproject.toml  simple_demo.py  specs.md  test_game.py  test_gym_env.py  train_agent.py  types.py
exps/: pygame_demo.py
src/: __init__.py  config.py  environment.py  game.py  game_engine.py  gym_env.py  pygame_renderer.py
